--- a/src/ConsoleApp/appsettings.json
+++ b/src/ConsoleApp/appsettings.json
@@ -4,7 +4,7 @@
     //"ApiUrl": "https://localhost:7018/ChatGptEndpoint/with-response",
     "ApiUrl": "https://api.openai.com/v1/chat/completions",
     "DefaultIgnoreCondition": "WhenWritingNull",
-    "WriteIndented": true,
+    "WriteIndented": false,
     "UnsafeRelaxedJsonEscaping": false,
     "HttpTimeout": 30,
     "RetrySettings": {
