--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+	<TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Core</RootNamespace>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>AIEventing.snk</AssemblyOriginatorKeyFile>
