Added caching to ApplicationLogger and updated unit tests for same. Added new class to support the caching, hash generator.

--- a/src/ConsoleApp/appsettings.json
+++ b/src/ConsoleApp/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AiEventSettings": {
     "Model": "gpt-3.5-turbo",
-    //"ApiUrl": "https://localhost:7018/ChatGptEndpoint/with-response",
-    "ApiUrl": "https://api.openai.com/v1/chat/completions",
+    "ApiUrl": "https://localhost:7018/ChatGptEndpoint/with-response",
+    //"ApiUrl": "https://api.openai.com/v1/chat/completions",
     "DefaultIgnoreCondition": "WhenWritingNull",
     "WriteIndented": false,
     "UnsafeRelaxedJsonEscaping": false,
