--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -35,4 +35,8 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	</ItemGroup>
 </Project>
