--- a/src/Loggers/Loggers.csproj
+++ b/src/Loggers/Loggers.csproj
@@ -38,4 +38,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	</ItemGroup>
+
 </Project>
