Updated Core for changes to OpenAi service.

--- a/src/ConsoleApp/appsettings.json
+++ b/src/ConsoleApp/appsettings.json
@@ -1,8 +1,13 @@
 {
   "AiEventSettings": {
-    "Model": "gpt-3.5-turbo",
-    "ApiUrl": "https://localhost:7018/ChatGptEndpoint/with-response",
-    //"ApiUrl": "https://api.openai.com/v1/chat/completions",
+    "Environment": "Development",
+    "DeploymentId": "ABC-123-Do-Ray-Me",
+    "ApplicationId": "RCA Interests",
+    "ComponentId": "None",
+    "OpenAiModel": "gpt-3.5-turbo",
+    "OpenAiApiUrl": "https://localhost:7018/ChatGptEndpoint/with-response",
+    //"OpenAiApiUrl": "https://api.openai.com/v1/chat/completions",
+    "RcaServiceUrl": "https://localhost:7018/ChatGptEndpoint/with-bool",
     "DefaultIgnoreCondition": "WhenWritingNull",
     "WriteIndented": false,
     "UnsafeRelaxedJsonEscaping": false,
