--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,5 +14,6 @@
 	  <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.16" />
+	  <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
   </ItemGroup>
 </Project>
