--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,7 +7,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>AIEventing.snk</AssemblyOriginatorKeyFile>
-		<Authors>dwaing@outlook.com</Authors>
+		<Authors>dwaine.gilmer@protonmail.com</Authors>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<Title>AIEventing: AI-Assisted .NET Logging and Fault Analysis</Title>
@@ -21,8 +21,12 @@
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version>1.0.2</Version>
+		<Version>1.2.4</Version>
 	</PropertyGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="call PostBuildEvent.bat"/>
+	</Target>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
@@ -31,6 +35,11 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.7" />
+	  <PackageReference Include="OpenAI" Version="2.2.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="README.md">
