Added readme files to folders.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -44,6 +44,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Update="Caching\README.md">
+		  <PackagePath>\</PackagePath>
+		  <Pack>True</Pack>
+		</None>
+		<None Update="Configuration\README.md">
+		  <PackagePath>\</PackagePath>
+		  <Pack>True</Pack>
+		</None>
 		<None Update="README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
