--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -21,7 +21,7 @@
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version>1.2.4</Version>
+		<Version>1.2.5</Version>
 	</PropertyGroup>
 
 	<!--
@@ -40,6 +40,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.7" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
 	  <PackageReference Include="OpenAI" Version="2.2.0" />
 	</ItemGroup>
 
