--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
@@ -15,5 +17,6 @@
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.16" />
 	  <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
+	  <PackageReference Include="OpenAI" Version="2.3.0" />
   </ItemGroup>
 </Project>
