--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,19 +4,10 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
+  <!-- PackageReference items without versions - versions are managed centrally in Directory.Packages.props -->
   <ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
-	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.16" />
-	  <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
-	  <PackageReference Include="OpenAI" Version="2.3.0" />
+	  <PackageReference Include="Microsoft.Playwright" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" />
+	  <PackageReference Include="OpenAI" />
   </ItemGroup>
 </Project>
