--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -40,6 +40,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Http.Polly" />
+	  <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
+	  <PackageReference Include="Polly" />
+	  <PackageReference Include="Polly.Extensions.Http" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Update="Caching\README.md">
 		  <PackagePath>\</PackagePath>
 		  <Pack>True</Pack>
