--- a/tests/benchmarktests/LoggerBenchMarkTests/LoggerBenchMarkTests.csproj
+++ b/tests/benchmarktests/LoggerBenchMarkTests/LoggerBenchMarkTests.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="BenchmarkDotNet" />
   </ItemGroup>
 
   <ItemGroup>
