--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -26,6 +26,12 @@
 		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 	</PropertyGroup>
 
+	<!--
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="call PostBuildEvent.bat"/>
+	</Target>
+	-->
+
   <ItemGroup>
     <None Update="README.md">
       <PackagePath>\</PackagePath>
